# vala-rt

./: .clang-format  README.md  meson.build
.github/workflows/: ci.yml
src/: backend_direct.c  backend_section.c  backend_separate.c  copied.c  meson.build  vala-rt-internal.h  vala-rt.c  vala-rt.h  vala_rt-version.h.in
